# OSMO

./: .bazelrc  .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  MODULE.bazel  codecov.yml  migrate_field_extras.py  migrate_fields.py  migrate_validators.py  pyproject.toml
.agent/: convert_config.py  migrate_pydantic_v2.py  task.json
.agent/discovered/: conventions.md  knowledge.md  quality-gates.json  repo-profile.json
.agent/memory/: long-term.json
.claude/: settings.json
.github/workflows/: coverage.yaml  docs-deploy.yaml  pr-checks.yaml  testbot-respond-approve.yaml  testbot.yaml
.osmo-agent-strategy/: README.md
.osmo-agent-strategy/architecture/: ai-native-framework.md  substrate-design.md
.osmo-agent-strategy/decisions/: decided.md  open-questions.md  stress-test-findings.md
.osmo-agent-strategy/vision/: personas.md  thesis.md
bzl/: py.bzl
bzl/linting/: BUILD  locked_requirements.txt  run_pylint.py
bzl/mypy/: BUILD  locked_requirements.txt  mypy.ini
bzl/patches/: BUILD  rules_python_coverage_tool_label.patch
deployments/brev/: setup.sh
deployments/scripts/: deploy-k8s.sh
deployments/upgrades/: 6_0_to_6_2_upgrade.md
docker/agent/: Dockerfile
docs/: docs_requirements.txt  locked_requirements.txt  spelling_wordlist.txt
docs/deployment_guide/: index.rst
docs/user_guide/: index.rst
run/: start_backend_bazel.py  start_service_bazel.py
skills/: README.md
skills/osmo-agent/: SKILL.md
src/: go.mod  go.sum  locked_requirements.txt  requirements.txt
src/cli/: BUILD  access_token.py  cli_builder.py  dataset.py  local.py  (+6 more)
(+401 files in other folders)
